--- a/01-Fundamentals-Part-1/starter/index.html
+++ b/01-Fundamentals-Part-1/starter/index.html
@@ -1,29 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>JavaScript Fundamentals – Part 1</title>
-    <style>
-      body {
-        height: 100vh;
-        display: flex;
-        align-items: center;
-        background: linear-gradient(to top left, #28b487, #7dd56f);
-      }
-      h1 {
-        font-family: sans-serif;
-        font-size: 50px;
-        line-height: 1.3;
-        width: 100%;
-        padding: 30px;
-        text-align: center;
-        color: white;
-      }
-    </style>
-  </head>
-  <body>
-    <h1>JavaScript Fundamentals – Part 1</h1>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>David Honeman|JavaScript Fundamentals – Part 1</title>
+
+</head>
+<style>
+  body {
+    background-color: gray;
+  }
+  fieldset{
+    padding:15px;
+  }
+  #outField{
+    background-color: rgb(130, 155, 175);
+    position: relative;
+    z-index: 0;
+  }
+  #inField{
+    position: relative;
+    z-index: 1;
+    background-color: darkslategray;
+    border-radius: 15px;
+    color:rgb(31, 26, 94);
+  }
+</style>
+
+<body>
+  <h1>JavaScript Fundamentals – Part 1</h1>
+  <h2>David Honeman</h2>
+  <fieldset id="outField">
+    <legend><b><i><u>JavaScript Fundamentals</u></i></b></legend>
+
+    <fieldset id="inField">
+      <legend><b><i>Coding Challenge #1</i></b></legend>
+    <h3>Instructions:</h3>
+    <ul>
+      <li>Mark and John are trying to compare their BMI (Body Mass Index)</li>
+      <li>BMI is calculated using the formula:</li>
+      <li> BMI = mass / height ** 2 = mass / (height * height). (mass in kg and height in meter).</li>
+      <ol>
+        <li>Store Mark's and John's mass and height in variables</li>
+        <li>Calculate both their BMIs using the formula (you can even implement both versions)</li>
+        <li>Create a boolean variable 'markHigherBMI' containing information about whether Mark has a higher BMI than
+          John.</li>
+      </ol>
+    </ul>
+    <hr>
+    <h3>Test Data</h3>
+    <ul>
+      <li>TEST DATA 1: Marks weights 78 kg and is 1.69 m tall. John weights 92 kg and is 1.95 m tall.
+
+      </li>
+      <li>
+        TEST DATA 2: Marks weights 95 kg and is 1.88 m tall. John weights 85 kg and is 1.76 m tall.
+      </li>
+    </ul>
+  </fieldset>
+  <fieldset>
+    <legend>Results</legend>
+    <ol>
+      <li>MarkHigherBmg = <p id="bmimark1">False</p></li>
+      <li>MarkHigherBmg = <p id="bmimark2"></p>True</li>
+    </ol>
+  </fieldset>
+</fieldset>
+  <script src="./script.js"></script>
+</body>
+
 </html>
